--- a/index.html
+++ b/index.html
@@ -4,15 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,800&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/3f86d2f0e3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <title>my aowsome web</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Shahidul Islam || Front-end dev || Fiver Freelancer || Graphics Designer</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <header>
+        
+    </header>
+
+    <section class="main">
+
+        <div class="img">
+            <img src="shahidul shakil web meme.jpg" alt="">
+        </div>
+
+        <div class="profiles">
+
+            <div>
+                <h1>You can check out my other profile : -</h1>
+            </div>
+
+            <div>
+                <ul>
+                    <li><a href="#">Linkedin</a></li>
+                    <li><a href="#">Bihance</a></li>
+                    <li><a href="#">Fiver</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
