--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
 
             <div>
                 <ul>
-                    <li><a href="#">Linkedin</a></li>
-                    <li><a href="#">Bihance</a></li>
-                    <li><a href="#">Fiver</a></li>
+                    <li><a href="https://www.linkedin.com/in/shakil19/">
+                        <img src="LinkedIn-Logo.wine.svg" alt="">
+                    </a></li>
+                    <li><a href="https://www.behance.net/shakil-d">
+                        <img src="Behance-Logo.wine.svg" alt="">
+                    </a></li>
+                    <li><a href="https://www.fiverr.com/shahidul_shakil">
+                        <img src="fiverr-vector-logo.svg" alt="">
+                    </a></li>
                 </ul>
             </div>
         </div>
