--- a/index.html
+++ b/index.html
@@ -2,46 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Shahidul Islam || Front-end dev || Fiver Freelancer || Graphics Designer</title>
+    <link rel="stylesheet" href="./styles/style.css">
+    <title>Shahidul_Islam_Web_UI_Graphics</title>
 </head>
 <body>
-    <header>
+    
+    <header class="container">
         
     </header>
 
-    <section class="main">
 
-        <div class="img">
-            <img src="shahidul shakil web meme.jpg" alt="">
-        </div>
 
-        <div class="profiles">
-
-            <div>
-                <h1>You can check out my other profile : -</h1>
-            </div>
-
-            <div>
-                <ul>
-                    <li><a href="https://www.linkedin.com/in/shakil19/">
-                        <img src="LinkedIn-Logo.wine.svg" alt="">
-                    </a></li>
-                    <li><a href="https://www.behance.net/shakil-d">
-                        <img src="Behance-Logo.wine.svg" alt="">
-                    </a></li>
-                    <li><a href="https://www.fiverr.com/shahidul_shakil">
-                        <img src="fiverr-vector-logo.svg" alt="">
-                    </a></li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-
-    </footer>
 </body>
 </html>
