--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </a>
         <div class="tab-mobile">
             <div class="branding-1">
-                <img src="images/logo.svg" alt="">
+                <!-- <img src="images/logo.svg" alt=""> -->
+                 <h2>Shahidul <span>Shakil</span></h2>
             </div>
             <button class="hamberger mask">
                 <img src="images/hamberger.svg" alt="">
@@ -45,7 +46,7 @@
                 <nav id="main-nav" class="flex items-center justify">
                     <div class="left flex items-center">
                     <div class="branding">
-                        <img src="images/logo.svg" alt="">
+                        <h2>Shahidul <span>Shakil</span></h2>
                     </div> 
                     <div>
                         <a href="#home">Home</a>
