--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
                         <br>
                     <div class="social">
                         <nav class="flex">
-                            <li><a href="#"><i class="fas fa-globe-asia"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/shakil19/"><i class="fab fa-linkedin"></i></a></li>
-                            <li><a href="https://www.facebook.com/shakil.chs.31/"><i class="fab fa-facebook-f"></i></a>
+                            <li><a target="_blank" href="https://www.fiverr.com/users/shahidul_shakil/"><i class="fas fa-globe-asia"></i></a></li>
+                            <li><a target="_blank" href="https://www.linkedin.com/in/shakil19/"><i class="fab fa-linkedin"></i></a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/shakil.chs.31/"><i class="fab fa-facebook-f"></i></a>
                             </li>
-                            <li><a href="https://twitter.com/shahidu82021422"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://www.instagram.com/shakilss19/"><i class="fab fa-instagram"></i></a>
+                            <li><a target="_blank" href="https://twitter.com/shahidu82021422"><i class="fab fa-twitter"></i></a></li>
+                            <li><a target="_blank" href="https://www.instagram.com/shakilss19/"><i class="fab fa-instagram"></i></a>
                             </li>
                         </nav>
                     </div>
