github link added

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                         </div>
                     </div>
                     <div class="right">
-                        <a target="_blank" href="https://www.fiverr.com/shahidul_shakil/">
-                            <button class="btn btn-primary">My Fiverr</button>
+                        <a target="_blank" href="https://github.com/shahidul1920">
+                            <button class="btn btn-primary">My GitHub</button>
                         </a>
 
                     </div>
