--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
                 <div class="hero flex items-center justify">
                     <div class="left flex-1 flex justify-center" data-aos="fade-right">
 
-                        <img src="pq.png" alt="">
+                        <!-- <img src="pq.png" alt=""> -->
+                        <img class="profile_pic" src="./images/Shahidul_Shakil_profile.jpg" alt="">
+
 
                     </div>
                     <div class="right flex-1" data-aos="fade-left">
