--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
                             we'll tackle any challenge and turn your vision into reality.
 
                         </p>
-                        <div>
+                        <div class="buttons">
                             <button class="btn btn-scndry"><a href="ShahidulShakil_Dev_.pdf" download=""> Download
                                     CV</a></button>
+                            <button class="btn btn-primary"><a target="_blank" href="https://www.behance.net/shakil-d">Behance</a></button>
                         </div>
 
                     </div>
@@ -119,12 +120,17 @@
                         <br>
                     <div class="social">
                         <nav class="flex">
-                            <li><a target="_blank" href="https://www.fiverr.com/users/shahidul_shakil/"><i class="fas fa-globe-asia"></i></a></li>
-                            <li><a target="_blank" href="https://www.linkedin.com/in/shakil19/"><i class="fab fa-linkedin"></i></a></li>
-                            <li><a target="_blank" href="https://www.facebook.com/shakil.chs.31/"><i class="fab fa-facebook-f"></i></a>
+                            <li><a target="_blank" href="https://www.fiverr.com/users/shahidul_shakil/"><i
+                                        class="fas fa-globe-asia"></i></a></li>
+                            <li><a target="_blank" href="https://www.linkedin.com/in/shakil19/"><i
+                                        class="fab fa-linkedin"></i></a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/shakil.chs.31/"><i
+                                        class="fab fa-facebook-f"></i></a>
                             </li>
-                            <li><a target="_blank" href="https://twitter.com/shahidu82021422"><i class="fab fa-twitter"></i></a></li>
-                            <li><a target="_blank" href="https://www.instagram.com/shakilss19/"><i class="fab fa-instagram"></i></a>
+                            <li><a target="_blank" href="https://twitter.com/shahidu82021422"><i
+                                        class="fab fa-twitter"></i></a></li>
+                            <li><a target="_blank" href="https://www.instagram.com/shakilss19/"><i
+                                        class="fab fa-instagram"></i></a>
                             </li>
                         </nav>
                     </div>
@@ -433,7 +439,8 @@
                     </div>
                     <div data-aos="zoom-out" class="card">
                         <div class="img-wrapper">
-                            <img src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/280399195/original/19c06ab883ef720595f1c30fe76e6d70a196f66d/create-golden-ratio-logo.jpg" alt="">
+                            <img src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/280399195/original/19c06ab883ef720595f1c30fe76e6d70a196f66d/create-golden-ratio-logo.jpg"
+                                alt="">
                         </div>
                         <div class="card-cont">
                             <a href="#">
@@ -441,8 +448,10 @@
                             </a>
                             <span>Starting from $120</span>
                             <p>
-                                Are you looking for a logo that truly stands out? In a world where everyone wants a business logo, how can you ensure yours is unique and memorable?
-                                Ready to give your brand a visual boost? Let's chat about your vision and create a design that truly represents your business.
+                                Are you looking for a logo that truly stands out? In a world where everyone wants a
+                                business logo, how can you ensure yours is unique and memorable?
+                                Ready to give your brand a visual boost? Let's chat about your vision and create a
+                                design that truly represents your business.
 
                             </p>
                             <a href="https://www.fiverr.com/s/7Y7jN0a"> Read More</a>
@@ -535,8 +544,7 @@
             <div class="footer-icon">
                 <nav class="flex">
                     <li><a href="#"><i class="fas fa-globe-asia"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/shakil19/"><i
-                                class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/shakil19/"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="https://www.facebook.com/shakil.chs.31/"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="https://twitter.com/shahidu82021422"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="https://www.instagram.com/shakilss19/"><i class="fab fa-instagram"></i></a></li>
