--- a/index.html
+++ b/index.html
@@ -103,38 +103,40 @@
             </div>
         </header>
 
-        <section class="about mask" id="about">
-            <div data-aos="fade-left" class="container flex items-center">
-                <div class="flex-1">
-                    <img class="about-me-img" src="pq2.jpg" alt="">
-                </div>
-                <div class="flex-1">
-                    <h1>about <span>Me</span></h1>
-                    <h3>hello! i'm shahidul</h3>
-                    <p>
-                        Great to meet you! I'm a seasoned front-end dev and graphics designer with 4 years of
-                        experience. Using React.js, Figma, and Node.js, I create stunning UIs and robust front-end
-                        solutions. I'm also skilled in Photoshop and Illustrator for graphics needs.<br>
-                        I've collaborated with international companies like Bargedesk, IPSaustralia, Twoinsoft, and
-                        Trust Holidays, and continue to work with many. Let's create something amazing together!
-                        <br>
-                    <div class="social">
-                        <nav class="flex">
-                            <li><a target="_blank" href="https://www.fiverr.com/users/shahidul_shakil/"><i
-                                        class="fas fa-globe-asia"></i></a></li>
-                            <li><a target="_blank" href="https://www.linkedin.com/in/shakil19/"><i
-                                        class="fab fa-linkedin"></i></a></li>
-                            <li><a target="_blank" href="https://www.facebook.com/shakil.chs.31/"><i
-                                        class="fab fa-facebook-f"></i></a>
-                            </li>
-                            <li><a target="_blank" href="https://twitter.com/shahidu82021422"><i
-                                        class="fab fa-twitter"></i></a></li>
-                            <li><a target="_blank" href="https://www.instagram.com/shakilss19/"><i
-                                        class="fab fa-instagram"></i></a>
-                            </li>
-                        </nav>
+        <section class="aboutSec">
+            <div class="about mask" id="about">
+                <div data-aos="fade-left" class="container flex items-center">
+                    <div class="flex-1">
+                        <img class="about-me-img" src="pq2.jpg" alt="">
                     </div>
-                    </p>
+                    <div class="flex-1">
+                        <h1>about <span>Me</span></h1>
+                        <h3>hello! i'm shahidul</h3>
+                        <p>
+                            Great to meet you! I'm a seasoned front-end dev and graphics designer with 4 years of
+                            experience. Using React.js, Figma, and Node.js, I create stunning UIs and robust front-end
+                            solutions. I'm also skilled in Photoshop and Illustrator for graphics needs.<br>
+                            I've collaborated with international companies like Bargedesk, IPSaustralia, Twoinsoft, and
+                            Trust Holidays, and continue to work with many. Let's create something amazing together!
+                            <br>
+                        <div class="social">
+                            <nav class="flex">
+                                <li><a target="_blank" href="https://www.fiverr.com/users/shahidul_shakil/"><i
+                                            class="fas fa-globe-asia"></i></a></li>
+                                <li><a target="_blank" href="https://www.linkedin.com/in/shakil19/"><i
+                                            class="fab fa-linkedin"></i></a></li>
+                                <li><a target="_blank" href="https://www.facebook.com/shakil.chs.31/"><i
+                                            class="fab fa-facebook-f"></i></a>
+                                </li>
+                                <li><a target="_blank" href="https://twitter.com/shahidu82021422"><i
+                                            class="fab fa-twitter"></i></a></li>
+                                <li><a target="_blank" href="https://www.instagram.com/shakilss19/"><i
+                                            class="fab fa-instagram"></i></a>
+                                </li>
+                            </nav>
+                        </div>
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
