--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                     <li><a href="https://www.instagram.com/shakilss19/"><i class="fab fa-instagram"></i></a></li>
                 </nav>
                 <div>
-                    Copyright 2021 Name Shahidul_Islam_Shakil. All Right Reseved.
+                    Copyright 2021 Name Shahidul_Shakil. All Right Reseved.
                 </div>
             </div>
         </footer>
