--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
         <section class="contact mask">
             <div class="container">
                 <div class="text">
-                    <h1>Contact <span>Us</span></h1>
-                    <p>Contack us any time you want</p>
+                    <h1>Contact <span>me</span></h1>
+                    <p>Let's discuss and build something fun</p>
 
                 </div>
 
