--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             <div class="container">
                 <div class="text">
                     <h1>Contact <span>me</span></h1>
-                    <p>Let's discuss and build something fun</p>
+                    <p>Let's make something awesome</p>
 
                 </div>
 
